syntax = "proto3";
package osmosis.poolyield.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/c-osmosis/osmosis/x/pool-yield/types";

// GenesisState defines the pool yield module's genesis state.
message GenesisState {
  string mint_denom = 1;
  repeated google.protobuf.Duration lockable_durations = 2 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags)    = "yaml:\"lockable_durations\""
  ];
}
